test/valid/58170_nestedCalls/nestedCalls.agu
-- Author: 58170, Guilherme Sousa

let f (x) : Int -> Int = x + 1
let g (x) : Int -> Int = x * 2
let h (x) : Int -> Int = x - 3

let main(_) : Unit -> Unit =
  let result : Int = f(g(h(f(g(h(5))))));
  
  print(result)