test/invalid-syntax/58170_missingSet/missingSet.agu
-- Author: 58170, Guilherme Sousa

let main : Unit =
  let x : Int = 5;
  x = x + 1;
  print(x)